--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,6 +15,7 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
+      "@cc/auth": ["libs/auth/src/index.ts"],
       "@cc/data": ["libs/data/src/index.ts"]
     }
   },
