--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
   "dependencies": {
     "@nestjs/common": "^7.0.0",
     "@nestjs/core": "^7.0.0",
+    "@nestjs/mongoose": "^8.0.1",
     "@nestjs/platform-express": "^7.0.0",
+    "class-transformer": "^0.4.0",
+    "class-validator": "^0.13.1",
     "hbs": "^4.1.2",
+    "mongoose": "^6.0.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~6.6.3",
     "tslib": "^2.0.0"
