--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -14,10 +14,7 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
-    "paths": {
-      "@cc/auth": ["libs/auth/src/index.ts"],
-      "@cc/data": ["libs/data/src/index.ts"]
-    }
+    "paths": {}
   },
   "exclude": ["node_modules", "tmp"]
 }
